# ClassifyingWebApi-FastApi

./: .env.debug  .gitignore  alembic.ini  docker-compose.development.yml  docker-compose.yml  installed_packages.txt  preparedDataSet  preparedDataSetEn.csv  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  deps.py  log.py  main.py  router.py
app/classifier/bertModel/: RoBERTa_classifier.py
app/crud/: __init__.py  base.py  crud_website.py
app/db/: base_class.py  init_db.py  session.py
app/models/: website.py
app/router/: translation.py  website.py
app/schemas/: __init__.py  classification.py  translation.py  website.py
app/services/: Parsing.py  __init__.py  base.py  regex_dict.py  service_translation.py  service_website.py
dockerfile/: Dockerfile.Dev  Dockerfile.Prod
fastApi_venv/: pyvenv.cfg
secrets/: debug_db_password  prod_db_password
