[tool.poetry]
name = "roBert-classifier-websites"
version = "0.1.0"
description = ""
authors = ["Калинцев Михаил <mishanyi152@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
SQLAlchemy = "^2.0.29"
lxml = "^5.2.1"
tqdm = "^4.66.2"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
nltk = "^3.9.1"
emoji = "^2.12.1"
contractions = "^0.1.73"
scikit-learn = "^1.5.1"
torch = "^2.4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
beautifulsoup4 = "4.12.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
dnspython = "2.6.1"
email_validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
filelock = "3.14.0"
fsspec = "2024.5.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.23.2"
idna = "3.7"
Jinja2 = "3.1.4"
langdetect = "1.0.9"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
numpy = "1.26.4"
orjson = "3.10.3"
packaging = "24.0"
pandas = "2.2.2"
psycopg2-binary = "2.9.9"
pydantic = "2.7.1"
pydantic_core = "2.18.2"
Pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
PyYAML = "6.0.1"
regex = "2024.5.15"
requests = "2.32.2"
rich = "13.7.1"
safetensors = "0.4.3"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
SQLAlchemy = "2.0.30"
starlette = "0.37.2"
tokenizers = "0.19.1"
tqdm = "4.66.4"
transformers = "4.41.1"
typer = "0.12.3"
typing_extensions = "4.12.0"
tzdata = "2024.1"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvicorn = "0.30.0"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websockets = "12.0"
